syntax = "proto3";

option java_package = "pl.oxerek.reactiveportsadapters.adapters.inbound";
option java_multiple_files = true;

package pl.oxerek.reactiveportsadapters.adapters.inbound;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "pl/oxerek/reactiveportsadapters/adapters/inbound/model/payment.proto";

service PaymentService {

  rpc createPayment(pl.oxerek.reactiveportsadapters.adapters.inbound.model.PaymentGrpcRequest) returns (pl.oxerek.reactiveportsadapters.adapters.inbound.model.PaymentGrpcResponse);
  rpc updatePayment(pl.oxerek.reactiveportsadapters.adapters.inbound.model.PaymentWithIdGrpcRequest) returns (pl.oxerek.reactiveportsadapters.adapters.inbound.model.PaymentGrpcResponse);
  rpc modifyPayment(pl.oxerek.reactiveportsadapters.adapters.inbound.model.PaymentWithIdGrpcRequest) returns (pl.oxerek.reactiveportsadapters.adapters.inbound.model.PaymentGrpcResponse);
  rpc deletePayment(google.protobuf.StringValue) returns (google.protobuf.Empty);
  rpc getPayment(google.protobuf.StringValue) returns (pl.oxerek.reactiveportsadapters.adapters.inbound.model.PaymentGrpcResponse);
  rpc getPayments(google.protobuf.StringValue) returns (stream pl.oxerek.reactiveportsadapters.adapters.inbound.model.PaymentGrpcResponse);
}